--- a/src/components/Settings/i18n/ru.json
+++ b/src/components/Settings/i18n/ru.json
@@ -1,5 +1,6 @@
 {
   "label_title": "Настройки",
   "label_filter-placeholder": "Найти настройки",
-  "label_empty-placeholder": "Ничего не найдено"
+  "label_empty-placeholder": "Ничего не найдено",
+  "label_search": "Поиск"
 }
