feat(MobileHeader): add OverlapPanel

--- a/src/components/MobileHeader/i18n/en.json
+++ b/src/components/MobileHeader/i18n/en.json
@@ -1,4 +1,5 @@
 {
   "burger_button_close": "Close menu",
-  "burger_button_open": "Open menu"
+  "burger_button_open": "Open menu",
+  "overlap_button_close": "Close"
 }
