--- a/src/components/MobileHeader/i18n/ru.json
+++ b/src/components/MobileHeader/i18n/ru.json
@@ -1,4 +1,5 @@
 {
   "burger_button_close": "Закрыть меню",
-  "burger_button_open": "Открыть меню"
+  "burger_button_open": "Открыть меню",
+  "overlap_button_close": "Закрыть"
 }
