fix(AsideHeader): sorting issues

--- a/src/components/AllPagesPanel/i18n/en.json
+++ b/src/components/AllPagesPanel/i18n/en.json
@@ -2,6 +2,6 @@
   "menu-item.all-pages.title": "All pages",
   "all-panel.menu.category.allOther": "All other",
   "all-panel.resetToDefault": "Reset to default",
-  "all-panel.title.editing": "Editing",
+  "all-panel.title.editing": "Configuring the Menu Bar",
   "all-panel.title.main": "All pages"
 }
