--- a/src/components/AllPagesPanel/i18n/ru.json
+++ b/src/components/AllPagesPanel/i18n/ru.json
@@ -2,6 +2,6 @@
   "menu-item.all-pages.title": "Все страницы",
   "all-panel.menu.category.allOther": "Остальное",
   "all-panel.resetToDefault": "Сбросить по умолчанию",
-  "all-panel.title.editing": "Редактирование",
+  "all-panel.title.editing": "Настройка панели меню",
   "all-panel.title.main": "Все страницы"
 }
