feat: added all results search page

--- a/src/components/Settings/i18n/en.json
+++ b/src/components/Settings/i18n/en.json
@@ -2,5 +2,6 @@
   "label_title": "Settings",
   "label_filter-placeholder": "Search settings",
   "label_empty-placeholder": "No results found",
-  "label_search": "Search"
+  "label_search": "Search",
+  "all_results": "All results"
 }
