--- a/src/components/Settings/i18n/ru.json
+++ b/src/components/Settings/i18n/ru.json
@@ -2,5 +2,6 @@
   "label_title": "Настройки",
   "label_filter-placeholder": "Найти настройки",
   "label_empty-placeholder": "Ничего не найдено",
-  "label_search": "Поиск"
+  "label_search": "Поиск",
+  "all_results": "Все результаты"
 }
