fix: fixed "Go to" links when searching

--- a/src/components/Settings/i18n/en.json
+++ b/src/components/Settings/i18n/en.json
@@ -3,5 +3,5 @@
   "label_filter-placeholder": "Search settings",
   "label_empty-placeholder": "No results found",
   "label_search": "Search",
-  "all_results": "All results"
+  "label_all-results": "All results"
 }
