--- a/src/components/Settings/i18n/ru.json
+++ b/src/components/Settings/i18n/ru.json
@@ -3,5 +3,5 @@
   "label_filter-placeholder": "Найти настройки",
   "label_empty-placeholder": "Ничего не найдено",
   "label_search": "Поиск",
-  "all_results": "Все результаты"
+  "label_all-results": "Все результаты"
 }
