feat: use i18n for text

--- a/src/components/AsideHeader/i18n/en.json
+++ b/src/components/AsideHeader/i18n/en.json
@@ -1,5 +1,6 @@
 {
   "button_collapse": "Collapse",
   "button_expand": "Expand",
-  "label_more": "More"
+  "label_more": "More",
+  "label_others": "Others"
 }
