--- a/src/components/AsideHeader/i18n/ru.json
+++ b/src/components/AsideHeader/i18n/ru.json
@@ -1,5 +1,6 @@
 {
   "button_collapse": "Свернуть",
   "button_expand": "Развернуть",
-  "label_more": "Ещё"
+  "label_more": "Ещё",
+  "label_others": "Другие"
 }
